# SGD_PROJECT

./: CMakeLists.txt  brick.cpp
